web/style.css
@font-face {
	font-family: InterVariable;
	font-style: normal;
	font-weight: 100 900;
	font-display: swap;
	src: url('fonts/InterVariable.woff2') format('woff2');
}
@font-face {
	font-family: InterVariable;
	font-style: italic;
	font-weight: 100 900;
	font-display: swap;
	src: url('fonts/InterVariable-Italic.woff2') format('woff2');
}
@font-face { font-family:Inter; font-style:normal; font-weight:300; font-display:swap; src:url("fonts/Inter-Light.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:italic; font-weight:300; font-display:swap; src:url("fonts/Inter-LightItalic.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:normal; font-weight:400; font-display:swap; src:url("fonts/Inter-Regular.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:italic; font-weight:400; font-display:swap; src:url("fonts/Inter-Italic.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:normal; font-weight:500; font-display:swap; src:url("fonts/Inter-Medium.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:italic; font-weight:500; font-display:swap; src:url("fonts/Inter-MediumItalic.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:normal; font-weight:600; font-display:swap; src:url("fonts/Inter-SemiBold.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:italic; font-weight:600; font-display:swap; src:url("fonts/Inter-SemiBoldItalic.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:normal; font-weight:700; font-display:swap; src:url("fonts/Inter-Bold.woff2") format("woff2"); }
@font-face { font-family:Inter; font-style:italic; font-weight:700; font-display:swap; src:url("fonts/Inter-BoldItalic.woff2") format("woff2"); }

@font-face { font-family:SFMono; font-style:normal; font-weight:300; src:url("fonts/SFMono-Light.otf"); }
@font-face { font-family:SFMono; font-style:italic; font-weight:300; src:url("fonts/SFMono-LightItalic.otf"); }
@font-face { font-family:SFMono; font-style:normal; font-weight:400; src:url("fonts/SFMono-Regular.otf"); }
@font-face { font-family:SFMono; font-style:italic; font-weight:400; src:url("fonts/SFMono-Italic.otf"); }
@font-face { font-family:SFMono; font-style:normal; font-weight:500; src:url("fonts/SFMono-Medium.otf"); }
@font-face { font-family:SFMono; font-style:italic; font-weight:500; src:url("fonts/SFMono-MediumItalic.otf"); }
@font-face { font-family:SFMono; font-style:normal; font-weight:600; src:url("fonts/SFMono-Semibold.otf"); }
@font-face { font-family:SFMono; font-style:italic; font-weight:600; src:url("fonts/SFMono-SemiboldItalic.otf"); }
@font-face { font-family:SFMono; font-style:normal; font-weight:700; src:url("fonts/SFMono-Bold.otf"); }
@font-face { font-family:SFMono; font-style:italic; font-weight:700; src:url("fonts/SFMono-BoldItalic.otf"); }


* {
	--color-red: #ED1B23;
	--color-blue: #2080FF;
	--color-gray0: #202020;
	--color-gray1: #A0A0A0;
	
	--color-background: #FCFCFC;
	--color-tablerowHoverBG: rgba(0,0,0,0.05);
	--color-tablerowIncompleteBG: rgba(237,27,35,0.125);
	
	--line-style: 0.05em solid var(--color-gray1);
	
	box-sizing: border-box;
}


body {
	background: var(--color-background);
	font-family: Inter, sans-serif;
	font-weight: 400;
	font-size: 12pt;
	line-height: 1.2;
	font-feature-settings: "cv02", "cv03", "cv04";
	letter-spacing: 0.01em;
	color: var(--color-gray0);
	max-width: 1200px;
	margin: 0 auto;
	padding: 0 2.5em;
	padding-bottom: 1.5em;
}
@supports (font-variation-settings: normal) {
	body { font-family: InterVariable, sans-serif; }
}


h1, h2, h3, h4 {
	font-family: SFMono, monospace;
}
h2 {
	font-size: 22pt;
}
h3 {
	font-size: 14pt;
}

p {
	--margin-p: 0.5em;
	margin-top: var(--margin-p);
	margin-bottom: var(--margin-p);
}

code {
	font-family: SFMono, monospace;
	font-weight: 500;
	font-size: 12pt;
}

b {
	font-weight: 500;
}

a {
	color: var(--color-blue);
	text-decoration: none;
}
a:link {
}
a:hover {
	text-decoration: underline;
}
a:visited {
}
a:active {
	color: var(--color-red);
	text-decoration: underline;
}

summary {
	cursor: pointer;
}
summary b:hover {
	text-decoration: underline;
}

.smallText {
	font-size: 10pt;
}


section {
	margin-top: 1em;
	margin-bottom: 1em;
}
ul {
	margin-top: 0;
}
li {
	margin: 0.3em 0px;
}
.sublist {
	margin: 0.0em 0px;
}


nav {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 0.6em 0;
	margin-bottom: 2em;
	
	font-size: 13pt;
	border-bottom: var(--line-style);
}
nav .active {
	color: var(--color-gray0);
	font-weight: 600;
}
nav a.active:hover {
	text-decoration: none;
}

.navbar_table {
	table-layout: fixed;
	text-align: center;
}
.navbar_table td {
	padding: 0 0.8em;
}

nav img {
	vertical-align: middle;
}


footer {
	border-top: var(--line-style);
	margin-top: 4em;
	padding: 0.5em;
	font-size: 10pt;
	line-height: 1.3;
}


.datatable {
	margin-top: 2.5em;
	/*
	margin-left: auto;
	margin-right: auto;
	*/
}
.datatable, .datatable th, .datatable td {
	font-family: SFMono, monospace;
	font-size: 11pt;
	line-height: 1.2;
	border: var(--line-style);
	border-collapse: collapse;
	padding: 0.25em 1em;
}
.datatable tr {
	background-color: transparent;
}
.datatable tr:hover {
	background-color: var(--color-tablerowHoverBG);
}
.datatable .row_incomplete {
	background-color: var(--color-tablerowIncompleteBG) !important;
}

.datatable .cell_nr {
	font-weight: 600;
	text-align: right;
	white-space: nowrap;
}
.datatable .cell_text {
	text-align: left;
}
.datatable .cell_data {
	text-align: center;
}
.datatable .cell_data a {
	font-weight: 500 !important;
}
.datatable .cell_icon {
	padding-top: 0;
	padding-bottom: 0;
}
.datatable .cell_icon img {
	height: 15pt;
	vertical-align: bottom;
}

